# ffmpeg-disect

./: .gitignore  README.md  config-commands.txt  config-options.txt  configs.txt  install-mingw-w64-packages.sh  mingw-w64-packages.txt  mingw-w64_packages.txt  mingw64_packages.txt  update_mingw-w64_packages.sh  update_mingw64_packages.sh  vm-setup.txt
ffplay/: CMakeLists.txt  README.md  build-and-run.sh  ffplay.cpp
ffplay/include/ffmpeg-include/libavutil/: ffversion.h
ffplay/include/fftools-incl/: cmdutils.h  opt_common.h
ffplay/include/fftools-incl/compat/: w32dlfcn.h
ffplay/libavformat/: avr.c:Zone.Identifier
ffplay/libs/ffmpeg-libs/lib/: avcodec-61.def  avdevice-61.def  avfilter-10.def  avformat-61.def  avutil-59.def  swresample-5.def  swscale-8.def
ffplay/libs/fftools-libs/: cmdutils.c  opt_common.c
